# openglPlusQt

./: CMakeLists.txt  fwworker.cpp  fwworker.h  glad.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
glad/: glad.h
